# urfsclient

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  router.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/rafs/src/metadata/layout/: mod.rs  v6.rs
src-tauri/src/: dataset_backend.rs  dataset_backend_type.rs  dataset_image_cmd.rs  inspect.rs  main.rs  upload.rs  upload_backend.rs  upload_backend_type.rs  validator.rs
src-tauri/src/core/: prefetch.rs
src/components/: DatasetCard.vue  DatasetTable.vue  OperateDatasetDialg.vue  SystemSettingDialg.vue  TaskManagerDialg.vue  TaskTable.vue  Upload.vue  history.vue  setting.vue  upload.vue
src/globalstatestore/: index.ts
src/layout/: AppMain.vue
src/router/: index.ts
src/util/: config.ts  http.ts  index.ts
src/views/: DataList.vue  Dataset.vue  DatasetDetail.vue  Home.vue  NotFound404.vue  index.vue  login.vue
