[package]
name = "urfsclient"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
thiserror = "1.0"
fern="0.6"
# Build nydus
anyhow = "1"
base64 = "0.13.0"
clap = { version = "4.0.18", features = ["derive", "cargo"] }
fuse-backend-rs = "0.10.1"
hex = "0.4.3"
hyper = "0.14.11"
hyperlocal = "0.8.0"
indexmap = "1"
lazy_static = "1"
libc = "0.2"
log = "0.4.8"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev",features = ["colored"] }
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
nix = "0.24.0"
rlimit = "0.9.0"
serde = { version = "1.0", features = ["derive", "serde_derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10.2"
tar = "0.4.38"
tokio = { version = "1", features = ["full"] }
vmm-sys-util = "0.10.0"
xattr = "0.2.3"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Build static linked openssl library
openssl = { version = "0.10.48", features = ["vendored"] }
# pin openssl-src to bring in fix for https://rustsec.org/advisories/RUSTSEC-2022-0032
#openssl-src = { version = "111.22" }

nydus-api = { version = "0.2.1", path = "api", features = ["handler"] }
nydus-app = { version = "0.3.2", path = "app" }
nydus-error = { version = "0.2.3", path = "error" }
nydus-rafs = { version = "0.2.2", path = "rafs" }
nydus-service = { version = "0.2.0", path = "service" }
nydus-storage = { version = "0.6.2", path = "storage" }
nydus-utils = { version = "0.4.1", path = "utils" }

vhost = { version = "0.5.0", features = ["vhost-user-slave"], optional = true }
vhost-user-backend = { version = "0.7.0", optional = true }
virtio-bindings = { version = "0.1", features = ["virtio-v5_0_0"], optional = true }
virtio-queue = { version = "0.6.0", optional = true }
vm-memory = { version = "0.9.0", features = ["backend-mmap"], optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
